adjust form size add edit form for my insights

--- a/modules/insights/client/css/insights.css
+++ b/modules/insights/client/css/insights.css
@@ -33,3 +33,10 @@
 .insights-list {
 	font-size: smaller;
 }
+.content-type {
+	font-size: medium;
+}
+.my-insights-actions button {
+	font-size: smaller;
+	font-weight: bold;
+}
