--- a/modules/insights/client/views/list-insights.client.view.html
+++ b/modules/insights/client/views/list-insights.client.view.html
@@ -6,9 +6,11 @@
     <tr style="background-color: #F9F9F9;">
       <td><input type="checkbox" ></td>
       <td colspan="7">
-        <button class="btn btn-primary no-border-radius site-button-width" ng-click="editInsight = !editInsight">Edit</button>
+        <button class="btn btn-primary no-border-radius site-button-width" ng-click="editInsight(checkboxes)">Edit</button>
         &nbsp;&nbsp;
-        <button class="btn btn-danger no-border-radius site-button-width" ng-click="multi_delete()">Delete</button></td>
+        <button class="btn btn-danger no-border-radius site-button-width" ng-click="multi_delete()">Delete</button>
+        &nbsp;&nbsp;<span class="text-danger">{{checkbox_warning}}</span>
+      </td>
     </tr>
 
     <tr ng-if="insights.length">
@@ -23,12 +25,12 @@
     </tr>
 
     <tr ng-repeat="insight in insights">
-      <td> <input type="checkbox" ng-model="slt[insight._id]"> </td>
+      <td> <input type="checkbox" ng-click="saveClickedCheckbox(insight._id)"> </td>
       <td ng-bind="insight.created | date:'mediumDate'"></td>
 
       <td class="hover" style="width:250px;">
-        <span ng-bind="insight.content | limitTo:100" ui-sref="insights.view({insightId: insight._id})" ng-hide="editInsight"></span>
-        <form name="insightForm" ng-submit="update(insightForm.$valid)" novalidate ng-controller="InsightsController" ng-show="editInsight">
+        <span ng-bind="insight.content | limitTo:100" ui-sref="insights.view({insightId: insight._id})" ng-hide="openEditBox == insight._id"></span>
+        <form name="insightForm" ng-submit="update(insightForm.$valid)" novalidate ng-controller="InsightsController" ng-show="openEditBox == insight._id">
           <div class="form-group" style="padding: 0 15px;">
             <textarea name="content" ng-model="insight.content" id="content" class="form-control" cols="30" rows="8" placeholder="Share an update"></textarea>
           </div>
