update insight content on listing page

--- a/modules/insights/client/views/list-insights.client.view.html
+++ b/modules/insights/client/views/list-insights.client.view.html
@@ -43,7 +43,7 @@
           </div>
           <br /><br />
           <div class="form-group text-center my-insights-actions">
-            <button class="btn btn-default no-border-radius" ng-click="multi_edit()">Done</button>&nbsp;&nbsp;
+            <button class="btn btn-default no-border-radius" ng-click="updateContent(insight)">Done</button>&nbsp;&nbsp;
             <button class="btn btn-primary no-border-radius" ng-click="multi_delete()">Re-Publish</button>
           </div>
         </section>
