re publish in popup

--- a/modules/insights/client/views/list-insights.client.view.html
+++ b/modules/insights/client/views/list-insights.client.view.html
@@ -44,7 +44,7 @@
           <br /><br />
           <div class="form-group text-center my-insights-actions">
             <button class="btn btn-default no-border-radius" ng-click="updateContent(insight)">Done</button>&nbsp;&nbsp;
-            <button class="btn btn-primary no-border-radius" ng-click="multi_delete()">Re-Publish</button>
+            <button class="btn btn-primary no-border-radius" ng-click="publish_popup('lg', insight)">Re-Publish</button>
           </div>
         </section>
       </td>
