--- a/modules/insights/client/views/list-insights.client.view.html
+++ b/modules/insights/client/views/list-insights.client.view.html
@@ -6,9 +6,9 @@
     <tr style="background-color: #F9F9F9;">
       <td><input type="checkbox" ></td>
       <td colspan="7">
-        <button class="btn btn-primary no-border-radius site-button-width" ng-click="editInsight(checkboxes)">Edit</button>
+        <button class="btn btn-primary no-border-radius site-button-width" ng-click="openContentBox(checkboxes)">Edit</button>
         &nbsp;&nbsp;
-        <button class="btn btn-danger no-border-radius site-button-width" ng-click="multi_delete()">Delete</button>
+        <button class="btn btn-danger no-border-radius site-button-width" ng-click="deleteInsights(checkboxes)">Delete</button>
         &nbsp;&nbsp;<span class="text-danger">{{checkbox_warning}}</span>
       </td>
     </tr>
