add font awesome, linking and formatting

--- a/modules/core/client/views/side-menu.client.view.html
+++ b/modules/core/client/views/side-menu.client.view.html
@@ -16,7 +16,7 @@
     <ul class="sub-section">
       <li><a ui-sref="home()" class="link-color">Create new Insight</li>
       <li><a ui-sref="insights.list()" class="link-color">My Insights</a></li>
-      <li><a ui-sref="settings.profile()" class="link-color">Profile (Edit)</a></li>
+      <li><a ui-sref="myprofile()" class="link-color">Profile (Edit)</a></li>
     </ul>
 
     <br /><br />
