--- a/modules/users/client/css/users.css
+++ b/modules/users/client/css/users.css
@@ -1,16 +1,14 @@
 .profile {
   width: 300px;
-  height: 300px;
 }
 .profile-box {
-  height: 270px;
+  height: 305px;
 }
 .small-site-logo {
     font-weight: bold;
     color: #359ECF;
     font-size: 10px;
     padding: 2px;
-    float: left;
     text-decoration: none;
     border: 1px solid #359ECF;
     margin: 10px;
@@ -21,24 +19,54 @@
 .profile-image-box {
   margin: 5px 0 20px 0;
 }
-h4.profile-name {
-  width: 100%;
-  text-align: center;
-  float: left;
+.profile-name-cover {
   text-transform: uppercase;
-  font-weight: bold;
-  margin: 0;
+  width: 170px;
+  margin-left: 65px;
+  text-align: center;
+  padding: 0 10px;
 }
 .profile-title {
-  width: 100%;
+  width: 190px;
   text-align: center;
-  float: left;
   font-style: italic;
+  margin-left: 50px;
+  padding: 0 10px;
 }
 .profile-image {
   border-radius: 50%;
   width: 100px;
 }
+.profile-social-links {
+  width: 100%;
+  margin-top: 10px;
+}
+.social-link {
+  padding: 4px;
+}
+.profile-data {
+  height: 100%;
+  margin: 0 auto;
+}
+.profile-name-box {
+  width: 100%;
+}
+.profile-edit-icon {
+  margin-top: 2px;
+}
+.edit-profile-data-icon {
+  padding: 3px;
+  background-color: lightgray;
+}
+.profile-name {
+  font-weight: bold;
+  margin: 0 0 10px 0;
+}
+
+
+
+
+
 @media (min-width: 992px) {
   .nav-users {
     position: fixed;
