--- a/modules/users/client/css/users.css
+++ b/modules/users/client/css/users.css
@@ -1,8 +1,10 @@
 .profile {
   width: 300px;
+  float: left;
 }
 .profile-box {
-  height: 305px;
+  float: left;
+  margin-bottom: 30px;
 }
 .small-site-logo {
     font-weight: bold;
@@ -43,13 +45,17 @@
 }
 .social-link {
   padding: 4px;
+  margin-top: 5px;
 }
 .profile-data {
   height: 100%;
   margin: 0 auto;
+  padding-bottom: 30px;
+  float: left;
 }
 .profile-name-box {
   width: 100%;
+  margin-bottom: 5px;
 }
 .profile-edit-icon {
   margin-top: 2px;
@@ -60,15 +66,27 @@
 }
 .profile-name {
   font-weight: bold;
-  margin: 0 0 10px 0;
+  margin: 0;
 }
 .edit-profile-title {
-  width: 220px;
-  margin: 0 5px 0 37px;
+  width: 190px;
+  margin: 10px 5px 5px 70px;
   float: left;
 }
-
-
+.profile-social-edit > input {
+  width: 190px;
+}
+.profile-social-edit {
+  padding: 0 40px 5px;
+  height: 43px;
+}
+.edit-first-name {
+  margin-bottom: 5px;
+  width: 190px;
+}
+.edit-last-name {
+  width: 190px;
+}
 
 
 @media (min-width: 992px) {
