--- a/modules/users/client/views/myprofile/popup-profile-image-user.client.view.html
+++ b/modules/users/client/views/myprofile/popup-profile-image-user.client.view.html
@@ -12,6 +12,7 @@
 	  	</div>
 		<div class="form-group text-center">
 			<button class="btn btn-primary" ng-click="uploadProfilePicture();">Upload</button>
+			<button class="btn btn-default" ng-click="cancelUpload();">Cancel</button>
 		</div>	  	
 	</fieldset>  
 </section>
