allow profile image change in edit mode only

--- a/modules/users/client/views/myprofile/myprofile.client.view.html
+++ b/modules/users/client/views/myprofile/myprofile.client.view.html
@@ -9,7 +9,7 @@
 			</div>
 
 			<div class="profile-image-box text-center">
-				<img src="{{authentication.user.profileImageURL}}" alt="profile photo" class="profile-image" ng-click="popupProfileImage('lg')">
+				<img src="{{authentication.user.profileImageURL}}" alt="profile photo" class="profile-image" ng-click="editProfileImage('lg')">
 			</div>
 
 			<div class="profile-data">
