add social icons to sidebar, iframe fix

--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -222,3 +222,7 @@ a:hover .header-profile-image {
   overflow: hidden;
   height: 75px;
 }
+.main-content > section {
+  width: 100%;
+  height: 100%;
+}
