--- a/modules/insights/client/views/sidebar-preview-insight.client.view.html
+++ b/modules/insights/client/views/sidebar-preview-insight.client.view.html
@@ -4,7 +4,19 @@
   <div style="padding-top:30px;">
     <img class="edit-img" ng-src="{{authentication.user.profileImageURL}}" alt="{{authentication.user.displayName}}"/><br />
     <span class="edit-profile-name" ng-bind="authentication.user.displayName"></span>
+    <div>{{authentication.user.title}}</div>
 
-    <section class="preview-insight">{{insight.content}}</section>
+    <div ng-hide="allowEditSocial">
+        <a href="{{user.twitter}}" target="_blank"><i class="fa fa-twitter social-link"></i></a>
+        <a href="{{user.linkedIn}}" target="_blank"><i class="fa fa-linkedin-square social-link"></i></a>
+        <a href="{{user.googlePlus}}" target="_blank"><i class="fa fa-google-plus social-link"></i></a>
+        <a href="{{user.facebook}}" target="_blank"><i class="fa fa-facebook-official social-link"></i></a>
+        <span class="glyphicon glyphicon-pencil edit-profile-data-icon" ng-show="editSocialButton" ng-click="editProfileSocial()"></span>
+    </div>
+
+    <section class="preview-insight text-left">
+    	<i class="fa fa-quote-left fa-3x"></i>
+    	{{insight.content}}
+    </section>
   </div>
 </div>
