add social icons

--- a/modules/insights/client/views/publish-lightbox-insight.client.view.html
+++ b/modules/insights/client/views/publish-lightbox-insight.client.view.html
@@ -35,11 +35,13 @@
             </section>
         </section>
 
-        <div>
-            <div class="col-xs-3"><input type="checkbox">&nbsp;LinkedIn</div>
-            <div class="col-xs-3"><input type="checkbox">&nbsp;Twitter</div>
-            <div class="col-xs-3"><input type="checkbox">&nbsp;Google</div>
-            <div class="col-xs-3"><input type="checkbox">&nbsp;Facebook</div>
+        <div class="popup-social-share">
+            <div>
+                <div class="col-xs-3 social-box"><input type="checkbox" class="popup-social-checkbox">&nbsp;<i class="fa fa-linkedin-square fa-3x"></i><span class="popup-social-text">LinkedIn</span></div>
+                <div class="col-xs-3 social-box"><input type="checkbox" class="popup-social-checkbox">&nbsp;<i class="fa fa-twitter-square fa-3x"></i><span class="popup-social-text">Twitter</span></div>
+                <div class="col-xs-3 social-box"><input type="checkbox" class="popup-social-checkbox">&nbsp;<i class="fa fa-google-plus fa-3x"></i><span class="popup-social-text">Google</span></div>
+                <div class="col-xs-3 social-box"><input type="checkbox" class="popup-social-checkbox">&nbsp;<i class="fa fa-facebook-official fa-3x"></i><span class="popup-social-text">Facebook</span></div>
+            </div>
         </div>
         <br /><br />
         <div class="form-group text-right">
