--- a/modules/insights/client/css/insights.css
+++ b/modules/insights/client/css/insights.css
@@ -41,3 +41,28 @@
 	font-size: smaller;
 	font-weight: bold;
 }
+.social-box {
+    border: 1px solid #efefef;
+    padding: 5px 10px;
+    width: auto;
+    margin-right: 20px;
+}
+.popup-social-share {
+	width: 100%;
+    float: left;
+    padding: 10px;
+}
+.popup-social-share > div {
+	height: 75px;
+    margin: 0 auto;
+    width: 620px;
+}
+.popup-social-checkbox {
+	position: relative;
+	bottom: 10px;
+}
+.popup-social-text {
+	position: relative;
+	bottom: 10px;
+	margin-left: 7px;
+}
